k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: kurutemizleme-db
spec:
  ports:
  - port: 3306
  selector:
    app: kurutemizleme-db
