k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: kurutemizleme-web
spec:
  type: LoadBalancer # GKE üzerinde otomatik olarak bir dış IP (External IP) almasını sağlar
  ports:
  - port: 80 # Dışarıdan erişilecek port
    targetPort: 80 # Container içindeki port
  selector:
    app: kurutemizleme-web
