k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-network-policy
spec:
  podSelector:
    matchLabels:
      app: kurutemizleme-db # Kuralların uygulanacağı podlar (Veritabanı)
  policyTypes:
  - Ingress # Gelen trafiği kontrol et
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: kurutemizleme-web # Sadece Web uygulamasından gelenlere izin ver
    ports:
    - protocol: TCP
      port: 3306 # Sadece MySQL portundan gelenlere izin ver
